--- a/app/src/main/res/drawable/trontrang.xml
+++ b/app/src/main/res/drawable/trontrang.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
     <stroke
         android:width="1dp"
-        android:color="#000" />
+        android:color="#fff" />
     <solid android:color="#fff" />
 </shape>
