--- a/app/src/main/res/layout/layout_food_detail.xml
+++ b/app/src/main/res/layout/layout_food_detail.xml
@@ -83,7 +83,7 @@
                         android:padding="12dp"
                         android:text="Food Name"
                         android:textColor="#1A554E"
-                        android:textSize="25sp"
+                        android:textSize="30sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -105,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:layout_weight="9"
-                            android:padding="12dp"
+                            android:padding="7dp"
                             android:text="15000đ"
                             android:textColor="#1A554E"
                             android:textSize="20sp"
@@ -116,14 +116,14 @@
                         android:id="@+id/number_button"
                         android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="12dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="18dp"
-                        app:backGroundColor="#6ADD6F"
-                        app:finalNumber="20"
+                        app:backGroundColor="#4FC3F7"
+                        app:finalNumber="50"
                         app:initialNumber="1"
                         app:textColor="#000000"
-                        app:textSize="8sp">
+                        app:textSize="10sp">
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
                 </LinearLayout>
 
