--- a/app/src/main/res/layout/content_khachhang.xml
+++ b/app/src/main/res/layout/content_khachhang.xml
@@ -11,6 +11,8 @@
     <ListView
         android:id="@+id/lvFood"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0sp"></ListView>
 
 </android.support.constraint.ConstraintLayout>
