--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#008577</color>
+<color name="colorPrimary">#21655E</color>
 <color name="colorPrimaryDark">#000</color>
 <color name="colorAccent">#D81B60</color>
 <color name="colorWhite">#FFF</color>
