update search food + forgot passwork

--- a/app/src/main/res/layout/activity_khachhang.xml
+++ b/app/src/main/res/layout/activity_khachhang.xml
@@ -14,12 +14,15 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
+        android:background="#6D000000"
+        app:itemTextColor="@color/colorWhite"
+        app:itemIconTint="@color/colorWhite"
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_khachhang"
-        app:menu="@menu/activity_test_drawer" />
+        app:menu="@menu/activity_khachhang_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
