--- a/app/src/main/res/layout/nav_header_khachhang.xml
+++ b/app/src/main/res/layout/nav_header_khachhang.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textColor="@color/colorWhite"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
