--- a/app/src/main/res/menu/activity_khachhang_drawer.xml
+++ b/app/src/main/res/menu/activity_khachhang_drawer.xml
@@ -7,7 +7,8 @@
         <item
             android:id="@+id/nav_xemthongtin"
             android:icon="@drawable/user1"
-            android:title="Xem thông tin cá nhân" />
+            android:title="Xem thông tin cá nhân"
+            />
         <item
             android:id="@+id/nav_timkiem"
             android:icon="@drawable/searchplus"
@@ -30,17 +31,6 @@
             android:title="Đăng xuất" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+
 
 </menu>
